--- a/Version4.0/user16/CSS/style.css
+++ b/Version4.0/user16/CSS/style.css
@@ -1,21 +1,101 @@
-table {
-	font-family: "Marker Felt", "Comic Sans MS", fantasy;
-	color: #003366;
+.button {
+	background-color: #4CAF50;
+	border: none;
+	color: white;
+	padding: 20px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	cursor: pointer;
+}
+
+.button1 {
+	border-radius: 8px;
+}
+
+.button2 {
+	border-radius: 30%;
+}
+
+.red {
+	background-color: #ff0000;
+}
+
+td{
+	padding:20px;
+}
+
+.button3 {
+	background-color:#c74545;
+	border-radius:42px;
+	border:12px solid #ff0091;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:28px;
+	padding:0px 44px;
+	text-decoration:none;
+	text-shadow:0px 4px 0px #453745;
+}
+.button3:hover {
+	background-color:#00ccff;
+}
+.button3:active {
+	position:relative;
+	top:1px;
+}
+
+        
+
+.button4 {
+	border-radius: 400%;
+	padding: 20px; 
+	
+background-color: #ff9500
+	
+}
+#morecontent {
+	background-color: yellow;
+  }
+  *{
+    text-align:right;
+    border: 2px solid #00ff00;
+}
+
+.button5 {
+	font-size: 40px;
+background-color: #0000ff	
+}
+.button5:hover {
+    background-color: #ff0000;
+    color: red;
+}
+
+.button4 { 
+	padding: button-largeRadius
+}
+
+.title{
+	color: red;
+	font-family: 'Trebuchet MS', sans-serif; 
+  }
+  
+  .title-large {
+	font-size: 2rem;
+  }
+  
+  .title-small {
+	font-size: .5rem;
+  }
+
+table{
 	margin-left: auto;
 	margin-right: auto;
-	text-align: left;
-	border-collapse: collapse;
-	cellspacing: 0px;
 }
 
-tr {
-	border: 1px solid #ffffff;
-	text-align: center;
-	background-color:#9FB6CD; 
-}
-
-th {
-	text-align: center;
-	color: #ffffff;
-	background-color: #003366;
+h1, h2, h3, h4, h5, h6{
+	text-align:center;
 }
