--- a/Version7.0/user16/CSS/style.css
+++ b/Version7.0/user16/CSS/style.css
@@ -45,3 +45,108 @@ h1 {
     border-bottom: 1px solid black;
     margin-bottom: 1em;
 }
+
+h2 {
+
+color:blue
+
+
+
+}
+
+
+
+h4 {
+
+color: crimson
+
+
+
+
+
+}
+
+h3 {
+    background-color: rgba(77, 79, 81, 0.848)
+
+}
+
+
+
+
+
+body {
+
+  background-color: rgba(24, 217, 104, 0.307);
+}
+
+footer {
+
+    background-color: rgb(77, 79, 81);
+
+
+}
+table {
+	
+	font-family: "Marker Felt", "Comic Sans MS", fantasy;
+	color: #003366;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: left;
+	border-collapse: collapse;
+	cellspacing: 0px;
+}
+
+tr {
+	border: 1px solid #ffffff;
+	text-align: center;
+	background-color:#9FB6CD; 
+}
+
+th {
+	text-align: center;
+	color: #ffffff;
+	background-color: #003366;
+}
+
+menu {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .wideMargin {
+    margin: 15px;
+  }
+  td {
+ color: #bf23a5;
+}
+  footer {
+    font-size: 12px;
+    text-align: center;
+  }
+  body {
+    font-size: 30px;
+  }
+  table {
+	
+	font-family: "Marker Felt", "Comic Sans MS", fantasy;
+	color: #003366;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: left;
+	border-collapse: collapse;
+	cellspacing: 0px;
+}
+
+tr {
+	border: 1px solid #ffffff;
+	text-align: center;
+	background-color:#9FB6CD; 
+}
+
+th {
+	text-align: center;
+	color: #ffffff;
+	background-color: #003366;
+}
+    
